The most recent update to the code with the package added that allows us to use steam-api commands

--- a/Desktop/passport-steam-master/passport-steam-master/package.json
+++ b/Desktop/passport-steam-master/passport-steam-master/package.json
@@ -32,6 +32,7 @@
   "main": "./lib/passport-steam",
   "dependencies": {
     "passport-openid": "^0.4.0",
+    "steam-api": "^1.1.3",
     "steam-web": "0.4.0"
   },
   "devDependencies": {
