--- a/Desktop/passport-steam-master/passport-steam-master/package.json
+++ b/Desktop/passport-steam-master/passport-steam-master/package.json
@@ -1,6 +1,6 @@
 {
   "name": "passport-steam",
-  "version": "1.0.8",
+  "version": "1.0.9",
   "description": "Steam (OpenID) authentication strategy for Passport.",
   "author": {
     "name": "Liam Curry",
@@ -31,15 +31,16 @@
   },
   "main": "./lib/passport-steam",
   "dependencies": {
+    "npm": "^5.8.0",
     "passport-openid": "^0.4.0",
     "steam-api": "^1.1.3",
-    "steam-web": "0.4.0"
+    "steam-web": "^0.4.0"
   },
   "devDependencies": {
     "ava": "^0.10.0",
-    "ejs": "^2.4.2",
-    "express": "^4.14.0",
-    "express-session": "^1.13.0",
+    "ejs": "^2.5.8",
+    "express": "^4.16.3",
+    "express-session": "^1.15.6",
     "passport": "^0.3.2"
   },
   "scripts": {
